scripts/nullaway/annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:28: error: [NullAway] dereferenced expression expression is @Nullable
		Number value = expression.evaluate();
		                         ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:15: error: [NullAway] initializer method does not guarantee @NonNull fields from (line 12), to (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private FOR(NumericVariable variable) {
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:42: error: [NullAway] unboxing of a @Nullable value
		int lineNumber = HPBasicProgram.nextLineNumber;
		                               ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:31: error: [NullAway] unboxing of a @Nullable value
		int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
		                                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:32: error: [NullAway] dereferenced expression expression is @Nullable
		variable.replace(from.evaluate().intValue(), to.evaluate().intValue(), expression.evaluate());
		                                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:11: error: [NullAway] initializer method does not guarantee @NonNull field value (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public NumericVariable(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:17: error: [NullAway] dereferenced expression body is @Nullable
		return body.evaluate();
		           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
